[package]
name = "near-new-prj"
description = "cargo-near-new-project-description"
version = "0.1.9"
edition = "2021"
# TODO: Fill out the repository field to help NEAR ecosystem tools to discover your project.
# NEP-0330 is automatically implemented for all contracts built with https://github.com/near/cargo-near.
# Link to the repository will be available via `contract_source_metadata` view-function.
repository = "https://github.com/dj8yfo/check_meta_version_link"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = { version = "5.1.0", git = "https://github.com/dj8yfo/near-sdk-rs", branch = "return_cargo_pkg_fallback_330meta"}

[dev-dependencies]
near-sdk = { version = "5.1.0", git = "https://github.com/dj8yfo/near-sdk-rs", branch = "return_cargo_pkg_fallback_330meta", features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
